--- a/PixiTSExamples.csproj
+++ b/PixiTSExamples.csproj
@@ -22,6 +22,7 @@
     <Content Include="examples\example 1 - Basics\indexTest2.html" />
     <Content Include="examples\example 2 - SpriteSheet\index.html" />
     <Content Include="examples\example 2 - SpriteSheet\indexTrim.html" />
+    <Content Include="examples\example 3 - MovieClip\index.html" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -33,10 +34,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="examples\example 1 - Basics\app.ts" />
-    <TypeScriptCompile Include="examples\example 1 - Basics\app2.ts" />
-    <TypeScriptCompile Include="examples\example 2 - SpriteSheet\app.ts" />
-    <TypeScriptCompile Include="examples\example 2 - SpriteSheet\app2.ts" />
+    <TypeScriptCompile Include="examples\example 1 - Basics\Example1A.ts" />
+    <TypeScriptCompile Include="examples\example 1 - Basics\Example1B.ts" />
+    <TypeScriptCompile Include="examples\example 2 - SpriteSheet\Example2A.ts" />
+    <TypeScriptCompile Include="examples\example 2 - SpriteSheet\Example2B.ts" />
+    <TypeScriptCompile Include="examples\example 3 - MovieClip\Example3.ts" />
     <TypeScriptCompile Include="lib\pixi.d.ts" />
     <TypeScriptCompile Include="lib\webgl.d.ts" />
   </ItemGroup>
